Add async example

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-home.html.erb
+<p id="first">Hello</p>
+<p id="second">Goodbye</p>
+<p id="third">Welcome</p>
+<p id="fourth">Farewell</p>
+<button onclick="changeColors()">Start</button>
