--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <button onclick="getData()">Start</button>
+<button onclick="showPolice()">Show police</button>
+<button onclick="showAll()">Show all</button>
 <div id="employees"></div>
